--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -1,30 +1,30 @@
-name: Cypress Tests
+name: Cypress Parallel Tests
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  install:
-    runs-on: ubuntu-22.04
-    needs: install
+  run_tests:
+    runs-on: ubuntu-latest
     strategy:
       # don't fail the entire matrix on failure
       fail-fast: false
       matrix:
         # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+        containers: [1, 2, 3]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Download the build folder
-        uses: actions/download-artifact@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          name: build
+          node-version: '18'
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
-        with:
-          build: npx cypress r
-          record: true
-          parallel: true
-          start: npm start
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Cypress tests
+        run: npm run ci
