--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Testing with cypress",
   "main": "index.js",
   "scripts": {
-    "test": "cypress open"
+    "test": "cypress open",
+    "ci":"npx cypress run"
   },
   "repository": {
     "type": "git",
