--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress open",
-    "ci":"npx cypress run"
+    "ci":"npx cypress run -- --parallel --ci-build-id 1"
   },
   "repository": {
     "type": "git",
