--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -21,18 +21,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "18"
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Download the build folder
-        uses: actions/download-artifact@v3
-
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
-        with:
-          build: cypress run
-          record: true
-          parallel: true
-          start: npm run ci
+      - name: Run Cypress tests
+        run: npm run ci
